表現の細かい訂正

--- a/hardproblem/5-06.html
+++ b/hardproblem/5-06.html
@@ -69,15 +69,14 @@
 　振り返れば、いつの間にか背後で立ち止まっているリコ。
 「こっちですよ」
 　リコに先導されて入ったのは脇の小道だった。
-　それまでの上り坂にあったセンターラインは最早この通りにはない。車のすれ違いすら難しいような生活道路が網の目のように交差する街区。細い通りの脇には築数十年の古びた戸建住宅が立ち並んでおり、西部解放戦役はおろか第二次大戦よりも昔に建築されたのではないかと疑いたくなるような木造建築の姿もあった。もちろんこの住宅街に小奇麗な庭なんてものはありやしない。ひとたび火の手が上がればいとも簡単に区画全体が延焼してしまいそうなほどに、古びた住宅群が密集して建てられている。その光景はニュータウン育ちの希海にとってまるで異界のようだった。迷いのない足取りで進んでいくリコの背中が少しだけ遠い。
+　それまでの上り坂にあったセンターラインは最早この通りにはない。車のすれ違いすら難しいような生活道路が網の目のように交差する街区。細い通りの脇には築数十年の古びた戸建住宅が立ち並んでおり、西部解放戦役はおろか第二次大戦よりも昔に建てられたのではないかと疑いたくなるような木造建築の姿もあった。もちろんこの住宅街に小奇麗な庭なんてものはありやしない。ひとたび火の手が上がればいとも簡単に区画全体が延焼してしまいそうなほどに、古びた住宅群が密集して建てられている。その光景はニュータウン育ちの希海にとってさながら異界だ。迷いのない足取りで進んでいくリコの背中が少しだけ遠い。
 「私が――」
 　その背中が、不意に声を上げる。
 「私がやらなきゃいけないことは……忘れ物を届けることなんです」
 「忘れ物？」
 「そう、真也さんと暮らしていた部屋に……とっても大切なものを置いてきてしまって、それを真也さんのお父さんとお母さんに届けないといけない。私はそのために、今日、ここへやってきたんです」
 「じゃあ、今向かっているのは……」
-「ええ、真也さんの家です」
-「すいません。正直に言うと、さっきちょっとだけ希海さんのことを疑ってしまったんです。実は全部知ってて、まだ知らないふりしてるんじゃないかなって。もちろん、そのあとの反応を見てそんな考えはすぐに捨てましたけど……、でも疑ってしまったことには変わりありません」
+「ええ、真也さんの家です。……すいません。正直に言うと、さっきちょっとだけ希海さんのことを疑ってしまったんです。実は全部知ってて、まだ知らないふりしてるんじゃないかなって。もちろん、そのあとの反応を見てそんな考えはすぐに捨てましたけど……、でも疑ってしまったことには変わりありません」
 「い、いや、そ、それは別にいいんだけど……私だって隠してたことは事実だし、リコだって知りたがってただろうから……」
 　リコはしどろもどろになる希海を鼓舞するように弱々しい微笑みを浮かべる。
 「さあ、もう着きましたよ。この角を曲がったところに――」
@@ -106,7 +105,7 @@
 「ちょ、ちょっと待ってよリコ！」
 「離してください！！」
 「ばか！　何の許可も取らずにこんなとこ入ったって怒られるだけじゃない！　重機だって動いてるし、最悪ケガじゃすまない事故起こすことだってあるのよ！」
-「でも行かなきゃいけないんです……。行かなきゃ……今行かなきゃ、真也さんの遺書がっ……！」
+「でも行かなきゃいけないんです！　行かなきゃ……！　今行かなきゃ、真也さんの遺書がっ……！」
 　遺書。
 　その単語を聞いた瞬間、確かに背筋が冷たくなるのを感じた。
 「い、遺書……？　遺書って……」
@@ -147,7 +146,7 @@
 「！！」
 　あまりに平静なリコの様子に慌てて表札へ目を向けた希海だったが、そこにあったのは見慣れぬ『桃山』の二文字。かつてのオーナーの苗字すら知らなかったことを今更ながらに思い知らされる。
 「ちょ、ちょっと待ってよリコ！　いくらなんでも――」
-　そこまでする必要はあるのか。真也が死んでからまだ1年そこらしか経っていないというのに、そんな話を遺族にする必要があるのだろうか。聞いて快い話では決してないし、相手にどんな思いをさせるか、その結果どんな言葉を投げかけられるか、何をされるか分かったものではない。
+　そこまでする必要はあるのか。真也が死んでからまだ一年そこらしか経っていないというのに、そんな話を遺族にする必要があるのだろうか。聞いて快い話では決してないし、相手にどんな思いをさせるか、その結果どんな言葉を投げかけられるか、何をされるか分かったものではない。
 「いくらなんでも……なんですか？　早すぎますか？　急すぎますか？」
 「そうじゃない！　い、いやそれもあるけど……。リコ、ちょっと落ち着いてよ！　そんなことしたら相手がどう出ると思う？　恨みを買って懲罰的廃棄処分の申請を出されたり、それが通らなくたって、個人的に何かされるかもしれないんだよ！？　リコ、自分の立場わかってる？　こういうこと言いたくないけどさ、リコは人間じゃない。ロボットなのよ！？　言ってみれば車や電柱と同じ。人を殴ったり傷つけることにためらいがある人だって、相手が機械なら簡単にそれができるかもしれないっ！」
 「ええ、そうです。私は、紛れも無いロボットです。いくら人間のふりをしてたって、頭のなかを覗いてみてもそこには機械があるだけで……。私が喋る言葉も、私の行動も、考えも、何もかも歯車の動作で決まっている。そんな純粋な……機械です」
@@ -161,14 +160,14 @@
 　だがその指先は、ボタンに触れるすんでの所で止まったままだ。
 「私は……」
 　何度も何度も、目を閉じ、強く念じて人差し指を動かそうとするリコ。もう見ていられなかった。だが、必死で恐怖を押し殺そうとする少女の必死さを前に一体何と言えばいいのだろう。『もういいよ』と、『リコは十分よくやった』と労うべきなのか。それとも『頑張れ』と言って背中を押してやるべきなのか。希海には分からない。だが、どちらを告げても結局リコを傷つけてしまうようなそんな気がして、ただただ震える少女の姿を見守ることしかできない。
-「私……私は…………私は……」
+「私……私は…………わ、たし……は……」
 　そしてそのしなやかな指先がボタンを押すことはついになかった。
 　糸が切れたように力なく降りてゆく腕。震える肩の向こうでは小さくすすり泣く声が聞こえた気がした。
 「リコ……」
 　よくやったと希海は思う。上手くいかなかったけれど、ここまで来れただけでも十分だ。自分がリコの立場だったならば、両親への報告はおろか、遺書を届けようとすら思わなかったはずだ。だが、それをどう告げればいいのか。リコは良くやったよというその自分の気持ちは、果たしてリコの望んでいる言葉なのだろうか。
 　そんなことを考えあぐねていたときだった。
 　ふたりの前方、家の扉から不意にガチャリと鍵の外れる音。
-――！！
+　――！！
 　希海は驚いて音の方を反射的に見る。だがもう遅い。そちらに視線をやった瞬間には蝶番が音を立てて軋みはじめ、頭が状況を理解した時には既にその人物が姿を表した後だった。
 　家の中から出てきたのは初老の男性。
 「あっ……」
