--- a/hardproblem/5-07.html
+++ b/hardproblem/5-07.html
@@ -80,7 +80,7 @@
 「っ……！」
 　布切れが顔に命中し、少しだけ痛そう顔をしかめるリコ。その様子に一抹の罪悪感が芽生えたが、希海はそれをもみ消すように少女から背を向ける。
 「もうあんたなんか知らない……！　そんな私に不満があるなら……ずっとひとりでいればいい……！」
-　そう吐き捨てて歩き出した。背後ですすり泣く声が聞こえてきたが、今はそれすら胸糞が悪い。護岸に備え付けられた階段を一段飛ばしで上り、海岸沿いの道に出る。アスファルトを踏みしめリコの泣き声が遠くなるほどに、後悔の念がふつふつと浮かんでくるが、今はその感情にすら苛立ちを覚えてしまう。そして行き交う車の間を縫って排気ガスの立ち込める国道を横断したところで、
+　そう吐き捨てて歩き出した。背後ですすり泣く声が聞こえてきたが、今はそれすら胸糞が悪い。護岸に備え付けられた階段を一段飛ばしで上り、海岸沿いの道に出る。アスファルトを踏みしめリコの泣き声が遠くなるほどに、後悔の念がふつふつと浮かんでくるが、希海はそんな自身の感情にすら苛立ちを覚えてしまう。そして行き交う車の間を縫って排気ガスの立ち込める国道を横断したところで、
 　ポケットからけたたましいベルの音がなった。
 　希海は乱暴に携帯端末を取り出すと立ち止まって液晶パネルの表示に目を落とす。発信者は、東だった。
 　希海は眉を潜めて舌打ちをする。
@@ -94,7 +94,7 @@
 「うるさいッ！！」
 　希海は端末を地面に叩きつけた。
 　液晶のカバーが粉々に砕け散る。決して安くない買い物だったはずなのに、幾つもの破片を散らして地面を跳ねるそれを目で追いかけけたところで一片の後悔すら湧いてこなかった。
-　けたたましく鳴り響いていた着信音が歪んだ音に変わり、やがて沈黙する。
+　けたたましく鳴り響いていた着信音は歪んだ音に変わり、やがて沈黙する。
 　はぁはぁと肩で大きく息。
 　呼吸が収まる頃になると、それまで希海を支配していた苛立ちは夢から醒めるように跡形もなく消えてしまっていた。そして代わりに胸を満たすのはどこか冷静な虚無感だけ。
 「…………」
