--- a/hardproblem/6-01.html
+++ b/hardproblem/6-01.html
@@ -24,7 +24,7 @@
 　たどたどしく話を続ける声。希海はリングマウスを付けた右手をせわしなく動かしながら説明を続けていた。右手を振るたびにカーソルがくるくると円を描き、画面上の数式や図表を指し示す。見るからに拙い説明であるが、当の本人にはそんな細かいことにまで気を配る余裕などありやしなかった。
 「であるからして、このデータを先ほどのモデルでフィットすると……」
 　あらかじめ考えておいた一連のセリフを必死に思い出しながら話を続ける。一年をかけてきちんと自分のものにした研究ならばともかく、この発表は博士課程の先輩がやったものを都合よく拝借しただけだ。実験の手伝いをしただけの希海が、自らの言葉で適切な説明などできようはずがない。ボロを出さぬよう、言葉が途切れてしまわぬよう、そして何より変な質問を誘発してしまわぬよう、慎重に言葉をぼかしながら説明を続けた。
-　そんな希海とプロジェクタを繋ぐ直線の向こう、ちょうど部屋の反対側にあたる場所。壁を背負うように設置された長机の前には、椅子に座って腕を組んだ教授の姿があった。眉間に皺を寄せたまま、微動だにせずただじっと希海の言葉に耳を傾けてる壮年の男。スクリーンの反射を受けて青白く照らされてたその顔はまるで死体のように薄気味が悪い。希海がページを切り替えるごとに、眼鏡に映り込んだ光がチカチカとせわしなく点滅していた。
+　そんな希海とプロジェクタを繋ぐ直線の向こう、ちょうど部屋の反対側にあたる場所。壁を背負うように設置された長机の前には、椅子に座って腕を組んだ高塚教授の姿があった。眉間に皺を寄せたまま、微動だにせずただじっと希海の言葉に耳を傾けてる壮年の男。スクリーンの反射を受けて青白く照らされてたその顔はまるで死体のように薄気味が悪い。希海がページを切り替えるごとに、眼鏡に映り込んだ光がチカチカとせわしなく点滅していた。
 「……以上で発表を終わります」
 　希海の言葉と同時に、教授は手元に置いてあったストップウォッチを止めた。ピッという電子音がファンの唸りに飲まれて消える。
 「九分。少し短いですね。緊張すると喋るのが速くなるから明日は意識してゆっくり喋ってください。それと発表内容の方ですが……」
@@ -36,7 +36,7 @@
 　とは言え、これで大手を振って家に帰れるのだ。誰に咎められることもなく温かい布団でぐっすりと寝られる。そう思うと沈んでいた気持ちも少しばかり高揚してくる気がした。そうだ、さっさと帰ろう。希海は爪の伸びきった手でラップトップのキーボードを叩き、実行させていたプレゼンテーションソフトを手早く終了させる。後はこのスライドを共有フォルダにコピーすれば明日の準備は完了だ。
 「ところで青山さん」
 　その様子を黙って眺めていた教授が不意に口を開いた。
-　これ以上話すことなんてない。頭のどこかでそう思っていた希海はぎくりとして、外部メモリを引っこ抜いたままの姿勢で固まってしまう。しまった。流石にそそくさとしすぎたか。あまりに淡々とした自分の様子が教授の機嫌を損ねてしまったのかもしれない。反省の色なしと見られて新たな課題を突きつけられたら一体どうしよう。流石にこれ以上はもう勘弁してくれと希海は思う。だが当の本人の心配をよそに教授は少しだけ柔和な表情を浮かべると、
+　これ以上話すことなんてない。頭のどこかでそう思っていた希海はぎくりとして、ラップトップを閉じようとしたままの姿勢で固まってしまう。しまった。流石にそそくさとしすぎたか。あまりに淡々とした自分の様子が教授の機嫌を損ねてしまったのかもしれない。反省の色なしと見られて新たな課題を突きつけられたら一体どうしよう。流石にこれ以上はもう勘弁してくれと希海は思う。だが当の本人の心配をよそに教授は少しだけ柔和な表情を浮かべると、
 「この一ヶ月半、毎日よく頑張りましたね。卒業の件はきちんと計らっておきます」
 　そう言ってよこすのだった。いつもの気難しい顔つきとは少し違う穏やかな表情。だが一方の希海はそんな教授をどうしても直視することができず、何かから目をそらすように視線を下へと落としてしまう。
 「あ、えっと……。ありがとうございます」
