--- a/hardproblem/6-02.html
+++ b/hardproblem/6-02.html
@@ -16,7 +16,7 @@
 <div class="text">
 　暗がりの中で鍵穴を探し、施錠を外して部屋に入った。いつもより広く感じる玄関で乱暴に靴を脱ぎ捨てると、室内灯のスイッチを入れる。
 （…………）
-　数日ぶりの我が家だったが、そのひどい有り様を見て希海はしばし固まってしまう。床には脱ぎ散らかした服が所狭しと散乱し、資料探しのためにあれでもないこれでもないとひっくり返した本棚は空席だらけ。台所にはろくに洗いもせずに放置していた食器が積み重なり、長きに渡り放置されてきた三角コーナーの残飯が酸っぱい臭いを放っていた。
+　数日ぶりの我が家だったが、そのひどい有り様を見て希海はしばし固まってしまう。床には脱ぎ散らかした服が所狭しと散乱し、資料探しのためにあれでもないこれでもないとひっくり返した本棚は空席だらけ。台所には洗いもせずに浸け置いていた食器が積み重なり、長きに渡り放置されてきた三角コーナーの残飯が酸っぱい臭いを放っていた。
 　ちっ、とひとつ舌打ちをして荷物を置いた。こんなことになるならきちんと片付けてから家を出るべきだったのだ。もっとも、そんな暇があったかと問われれば甚だ疑問ではあるのだが、このゴミ溜めの中で寝る気にはなれない。
 　どうしたものか。ベッドに腰掛け、あたりを見回した。本は後でもいいとして臭いの出る台所は最優先で片付けておきたかった。幸いにも季節が季節なので変な虫が湧いたりはしないだろうが、それでも早めに何とかした方がいいのは間違いない。それに服だってさっさとハンガーに掛けておかないと形が崩れてしまうだろう。服か台所か、それとも両方やるのか、はたまた何もせずに寝てしまうのか。
 「あっ……」
