--- a/hardproblem/6-03.html
+++ b/hardproblem/6-03.html
@@ -17,7 +17,7 @@
 　希海が連れて行かれた<ruby>暮葉<rp>《</rp><rt>くれは</rt><rp>》</rp></ruby>洞にある区立病院……ＳＤＲの事業所からほど近いこの建物の廊下はとても薄暗い。現在時刻は深夜の二時。ほとんどの照明が既に消灯されており、申し訳程度に点けられた蛍光色のライトがぽつんと希海を照らしている他は、すべてが闇の中に沈んでいた。階段上に設置された避難誘導灯の緑色が不気味なまでに明るい。
 　ぼんやりと自らの衣服に目をやる希海。明るい水色のチュニックには肩の部分にぽっかりと大きな穴が空いており、そこから真っ白な包帯が覗いている。医者の診断は靭帯損傷だった。骨が折れていなかったのが不幸中の幸いだったが、しばらくは動かせないらしい。
 （この服、結構気に入ってたのに……）
-　自らの足を組み替える静まり返った廊下に音が響き、ふと希海は既視感を覚える。薄暗い廊下で一人佇む自分。ほんの一年ほど前にも似たようなことがあった。そう、リコと初めて出会った日のことだ。いつまで掛かるか分からないリコの処置をただひたすらに待った。
+　自らの足を組み替える音が静まり返った廊下に響き、ふと希海は既視感を覚える。薄暗い廊下で一人佇む自分。ほんの一年ほど前にも似たようなことがあった。そう、リコと初めて出会った日のことだ。いつまで掛かるか分からないリコの処置をひたすらに待った。
 　ただあの日と違い、今回は希海の方から事を動かさねばならない。
 『診察が終わったら事業所に来たまえ。もし君にまだその気があるのなら……の話だがね』
 　つい数十分ほど前に告げられた言葉である。病院の受付を済ませると、東はそう言ってＳＤＲの事業所へと行ってしまった。普通に考えれば向こうでルーミングの準備をしている……といったところになるのだろう。だが、あれほど再度のルーミングを渋っていた東が、そんな急に態度を変えるだろうか。希海にはこの推測がどこか呑気なものに思えてならなかった。だが――
@@ -25,14 +25,14 @@
 （考えても仕方ない……か）
 　だが、いま自分が頼れるのは東だけなのだ。その東が来いと言った以上、希海はそれに従うしかない。
 「青山さん、青山希海さん」
-　女性の声が静寂を打ち破った。
+　女の声が静寂を打ち破った。
 　料金計算が終わったらしい。希海は窓口へと向かうと、東から借りていた一万円札の束をポケットから取り出し、支払いを済ませる。無保険での診療だったために釣りは数枚の小銭しか残らなかったが、そんなことに気を揉む余裕など最早なかった。今はとにかく東に会うこと、会ってリコを助けること。それだけだった。
 　釣り銭とともに薬を受け取ると、足早に病院を出る。ＳＤＲの事業所はここから徒歩で五分と掛からない。古びた住宅が並ぶ細い区道を歩いていると、やがて見知った門が見えてくる。２ｍほどの高さの白い外壁と、その向こうに見える大きな<ruby>楡<rp>《</rp><rt>にれ</rt><rp>》</rp></ruby>の木。見慣れた光景のはずなのに初めて訪れたような感覚に陥ってしまうのは今が深夜だからか、それとも居るべき者が隣に居ないからか。
 　事業所の敷地まであと十数歩といったところ。そこまで近づいた希海は門の前の暗がりに立つ一人の男の存在に気が付いた。
 「……来たか」
 　東はちらりと視線をよこしてみせる。その頭上ではひときわ明るい電灯がじりじりと音を立てて輝いていて、不気味なまでに明るく照らされた東の姿が今の希海にはまるで幽鬼か何かのように見えた。希海は相手に悟られぬよう深呼吸をひとつして
 「リコのルーミングを……、させてください」
-　そう言った。東を強く睨みつけ、こちらは決して引く気がないことを目で示す。そう、この男は幽鬼なのだ。<ruby>端境<rp>《</rp><rt>はざかい</rt><rp>》</rp></ruby>に立つ一人の幽鬼である。それは<ruby>現世<rp>《</rp><rt>うつしよ</rt><rp>》</rp></ruby>と<ruby>幽世<rp>《</rp><rt>かくりよ</rt><rp>》</rp></ruby>を隔てる<ruby>境界<rp>《</rp><rt>さかい</rt><rp>》</rp></ruby>であり、日常と非日常の<ruby>境界<rp>《</rp><rt>さかい</rt><rp>》</rp></ruby>だった。リコのいない<ruby>此岸<rp>《</rp><rt>こちらがわ</rt><rp>》</rp></ruby>と、リコのいる<ruby>彼岸<rp>《</rp><rt>あちらがわ</rt><rp>》</rp></ruby>。向こうへ渡るには、まずこの男の了解を取り付けなければならない。
+　そう言った。東を強く睨みつけ、こちらは決して引く気がないことを目で示す。そう、この男は幽鬼なのだ。<ruby>端境<rp>《</rp><rt>はざかい</rt><rp>》</rp></ruby>に立つ一人の幽鬼である。それは<ruby>現世<rp>《</rp><rt>うつしよ</rt><rp>》</rp></ruby>と<ruby>幽世<rp>《</rp><rt>かくりよ</rt><rp>》</rp></ruby>を隔てる<ruby>境界<rp>《</rp><rt>さかい</rt><rp>》</rp></ruby>であり、日常と非日常の<ruby>境界<rp>《</rp><rt>さかい</rt><rp>》</rp></ruby>だった。リコのいない<ruby>此岸<rp>《</rp><rt>こちらがわ</rt><rp>》</rp></ruby>とリコのいる<ruby>彼岸<rp>《</rp><rt>あちらがわ</rt><rp>》</rp></ruby>。向こうへ渡るには、まずこの男の了解を取り付けなければならない。
 「君もしつこいな」
 　だが幽鬼はそんな希海の視線を受け流すように目を逸らすと、どこか他人事のように虚ろにつぶやく。
 「どうしても……やると言うのかい？」
@@ -43,7 +43,7 @@
 　静寂のさなか、東はゆっくりとした動作でポケットから一枚のカードキーを取り出し、希海の視線から逃げるかのように背を向けると、やがてぽつりぽつりと言葉を紡ぎ始めた。
 「私達技術者が……、いやロボット産業に関わるすべての人間が、アンドロイドのことをどう思っているか知っているかい」
 　心ここにあらずといった様子で夜空を眺めている男の顔が、背中越しに見えた気がした。
-「答えはな……『ただの商品』だ。車や掃除機なんかと同じさ。テレビに出てくる連中は家族のように思っているだとか、娘のような気持ちだとか言うけどね。あんなのは嘘っぱちだよ。本当にそう思っているのなら、その大切な家族を物のように売り飛ばせるわけがない。アンドロイドはただの<ruby>道具<rp>《</rp><rt>ツール</rt><rp>》</rp></ruby>。そう割り切らなければ、こんな仕事やっていけないのさ」
+「答えはな……『ただの商品』だ。車や掃除機なんかと同じさ。テレビに出てくる連中は家族のように思っているだとか、我が子のような気持ちだとか言うけどね。あんなのは嘘っぱちだよ。本当にそう思っているのなら、その大切な家族を物のように売り飛ばせるわけがない。アンドロイドはただの<ruby>道具<rp>《</rp><rt>ツール</rt><rp>》</rp></ruby>。そう割り切らなければ、こんな仕事やっていけないのさ」
 　東の声色は弱々しく、まるで今にも夜の空に溶け去ってしまいそうだった。いつもは大きく見える背中も、この時ばかりはやけに小さく思える。
 「入社したての頃はまだ熱い気持ちを持っていた。アンドロイドは人間にとって都合のいい労働力なんかじゃない。人と手を取り合い対等な立場で共に歩んでいくパートナーだと、そう信じていたさ」
 　それは希海に向けた言葉であると同時に、東自身への言葉であったのかもしれない。あるいは神か、それとも宇宙か。まるで懺悔室にでも居るかのような指向性を持たぬ言葉が、冷たい疎密波となって夜の<ruby>静寂<rp>《</rp><rt>しじま</rt><rp>》</rp></ruby>に溶けていく。
@@ -52,7 +52,7 @@
 「人間を作りたいと言ったのはどこのどいつだ……か。まったく、耳の痛い言葉だ」
 　東は振り返り、自嘲げにフフと笑いをこぼした。もはや悔いも迷いも存在しない。希海のよく知る陽気であけっ広げな技術者の姿がそこにはあった。
 「すまないね。急にこんな身の上話をして。青山君にはとても感謝しているよ。君がこうして肩に傷を負ってまでリコを助けたいと言ってくれたからこそ、君が一喝してくれたからこそ、私はふたたび昔の気持ちを思い出すことができたんだ。君にリコを託すと決断したときのようにね。そして彼女を救える可能性が少しでもあるならばそちらに賭けるべきだと、今なら何の疑いもなく断言できる。だがな……、本当に君をもう一度あちら側へ送ってもいいのだろうか？　その答えが私にはまだ掴みかねているんだ。リコを助けたいという気持ちはこちらも同じだが、そのために君を危険な目に合わせるべきじゃないこともまた確かだ。そうだろう？」
-　そう言って東は見定めるような視線で見つめてくる。だが希海は臆することなく、そんな彼の目を真正面から見据えた。皺の寄った堀の深い東の目。互いの視線がぶつかり、睨み合うような時間が続く。
+　そう言って東は見定めるような視線で見つめてくる。だが希海は臆することなく、そんな彼の目を真正面から見据えた。皺の寄った彫りの深い東の目。互いの視線がぶつかり、睨み合うような時間が続く。
 「……やれやれ」
 　やがて東は根負けをしたように、希海から視線を外すと小さく頭を掻きむしり、
 「ダメだと言っても……、どうせ聞く耳を持たんのだろうな。まったく、私の若い頃を見てるようだよ。分かった。私の負けだ。君が納得の行くようにさせてやろうじゃないか」
