--- a/hardproblem/6-04.html
+++ b/hardproblem/6-04.html
@@ -21,11 +21,10 @@
 　――でも今連れて帰らなきゃリコは
 　朦朧とした意識の中でとめどなく広がっていく思考。
 　そうだ。リコには後がないのだ。ここでリコを連れて帰らなければ、あの子に待っているのはただ死のみである。だが果たして……、それはリコのためになるのだろうか。苦痛に満ちた生と安らかな死。両者を天秤に掛け、それでも前者を選ぶべきだと、そう断言できるだけの根拠が一体どこにあるのだろうか。
-　――けれど私は
-　血中に溶けた薬剤が血管を伝って体中を巡る。神経細胞の信号伝達が徐々に阻害されてゆくに従い、希海の精神は周囲から隔絶された孤立系と化してゆく。そしてその孤立度がある閾値を越えたとき、ルーミングマシンの<ruby>堰<rp>《</rp><rt>ゲート</rt><rp>》</rp></ruby>が開かれ二つの系が接続されるのだ。その時どんな反応が待っているのか、それは誰にも分からない。
+　血中に溶けた薬剤が血管を伝って体中を巡る。神経細胞の信号伝達が徐々に阻害されてゆくに従い、希海の精神は周囲から隔絶された孤立系と化してゆく。そしてその孤立度がある閾値を越えたとき、ルーミングマシンの<ruby>堰<rp>《</rp><rt>ゲート</rt><rp>》</rp></ruby>が開かれ二つの系が接続されるのだ。その時にどんな反応が起こるのか、それは誰にも分からない。
 　そして手に何かが触れた。固くて滑りが良く、少しだけひんやりとした感触。多分、板張りの床。次に感じたのは光。窓の外から指す眩しいばかりの陽光が希海の網膜を刺激する。
 「ん……」
-　当て木で固定されていたはずの左腕を地面に突き立て、眠りから覚めるように体を起こす。動かせなかったはずの左腕が動き、本来ならば感じるはずの痛みもなかった。なぜならここはもはやルーミング室の暗闇でも、物理法則の支配する実空間でもないからだ。そこは意識と<ruby>感覚質<rp>《</rp><rt>ク　オ　リ　ア</rt><rp>》</rp></ruby>が満ち満ちる混沌の海。他者の精神の、その深部である。
+　当て木で固定されていたはずの左腕を地面に突き立て、眠りから覚めるように体を起こす。動かせなかったはずの左腕が動き、本来ならば感じるはずの痛みもなかった。なぜならここはもはやルーミング室の暗闇でも、物理法則の支配する実空間でもないからだ。そこは意識と<ruby>感覚質<rp>《</rp><rt>ク オ リ ア</rt><rp>》</rp></ruby>が満ち満ちる混沌の海。他者の精神の、その深部である。
 　目を開いた希海の前にあったのは、小奇麗に片付けられた六畳間。部屋の奥にある窓から見える、目の覚めるような青い海と白い雲。大合唱を奏でるセミの声。そして――
 「また来たんですか」
 　そしてその窓辺には少女がひとり、背中を見せたまま微動だにせず佇んでいる。何もかもが前と同じだった。……たったひとつ、彼女の傍らに浮かぶ深黒の物体を除いて。
@@ -37,13 +36,13 @@
 「一緒に帰ろ」
 　希海は気付かれないよう小さく深呼吸をすると、単刀直入に呼びかけた。自分がここに来たということは、つまりそういうことなのだ。隠したところで仕方がない。そう思った。
 「……希海さん。最近はどうしてますか。大学にはちゃんと行けてますか？」
-　だが一方のリコは窓の外へ視線を向けたまま。まるで希海の言葉など聞こえていないかのような口調だった。
+　だが一方のリコは窓の外へ視線を向けたまま、まるで希海の言葉など聞こえていないかのような口調で問いを投げかける。
 「……うん、なんとか行けてるよ。もうすぐ卒業できそう」
 「すごいじゃないですか。やっぱり希海さんは、やればできるんです。今まではちょっと躓いてただけ。思っていたとおりです。実はそれだけが心残りだったんですけど……その心配事もなくなりました。だからもう、私のことなんか構う必要なんてないんですよ。希海さんは……、希海さんの幸せを探してください」
 「リコ、ずっとこっちに居たから知らないでしょ。リコが帰ってこないと電源落とすって話になってるの。死んじゃうんだよ？」
 　走る雲が太陽に掛かる。照明を絞ったように部屋の中が薄暗くなってゆき、セミの声が止んだ。
 「希海さんは死ぬのが怖いですか？」
-　少女は感情のない声でそう尋ねると、小さな白い手をそっと窓枠へと添えた。その動作に誘導されるように希海も窓の向こうへと視線を移すと、そこにあったのは鮮やかな夏の憧憬。風にそよぐ緑の木々と、突き抜けるような青い空。薄暗い室内とは対照的な明るい世界。けれどそこには希海の大嫌いな夏の重たい空気や、じりじりと体力を奪ってゆく熱気が漂っているに違いなかった。
+　少女は感情のない声でそう尋ねると、小さな白い手をそっと窓枠へと添えた。その動作に誘導されるように窓の向こうへ視線を移すと、そこにあったのは鮮やかな夏の憧憬。風にそよぐ緑の木々と、突き抜けるような青い空。薄暗い室内とは対照的な明るい世界。けれどそこには希海の大嫌いな夏の重たい空気や、じりじりと体力を奪ってゆく熱気が漂っているに違いなかった。
 「……私は別に構いません。怖くないって言えば嘘になりますけど、でも戻ってまたつらい思いをするよりはずっとマシです。だからもう……放っておいてください」
 　窓の向こうと薄暗い室内。苦痛に満ちた生と、安らかな死。両者を天秤にかけ、それでもこちら側にいることを望む少女。その気持ちは希海にだって痛いほど分かる。どうしようもない現実と戦って傷付くくらいならば、この安らかな場所で短い生涯を終えた方がましなのかもしれない。でも――
 「でも私は、そんなの嫌」
@@ -56,7 +55,7 @@
 　前へと足を踏み出す。
 　自分はそんなつもりじゃないと、リコの言葉を否定したい気持ちもあった。自らの中に芽生え始めた恐怖心を無理やり抑えこもうとする無意識もあった。そんな様々な意図が混在した希海の一歩。だが、その一歩が裏目だった。
 「近づかないでください！」
-　限界まで張り詰めた空気が破裂した。突然声を荒げたリコの肩口からオルゴンの突風がパルスのように吹きつける。そのノイズまみれの風は希海を守るオルゴンのベールを剥ぎ取り、視界が暗転したかと思った次の瞬間には希海の体はなすすべもなく宙に浮いてしまっていた。
+　限界まで張り詰めた空気が破裂した。突然声を荒げたリコの肩口から突風がパルスのように吹きつける。そのノイズまみれの風は希海を守るオルゴンのベールを剥ぎ取り、視界が暗転したかと思った次の瞬間には希海の体はなすすべもなく宙に浮いてしまっていた。
 　―――――！！
 　がたんという大きな音。体が部屋の反対側に叩きつけられる。背中に激痛が走るのを知覚したのも束の間、希海はそのまま壁を伝うようにして地面へと墜落してしまう。壁際に置かれた机の角を肋骨が強打し、言いようのない激痛が体中を縦横に走り回った。
 　そんな希海の様子を見たリコは一瞬はっとすると、やがて申し訳なさそうに下を向いてしまい、
@@ -71,7 +70,7 @@
 　一歩、二歩。
 　ゆっくりと前へ出る希海の膝は隠しようもないほどに震えている。正直言って、怖かった。一歩を踏み出すのが怖い。前へ出るのが怖い。まるで将棋崩しだ。いつリコが暴発し再度の嵐に見舞われるかわからない。さっきのなんてまだマシな方だ。リコが本気でオルゴンの風を呼び起こせば……、そしてそれをまともに受ければ、自分の意識など簡単に消し飛んでしまうだろう。そしてここで意識を失うということは、下手をすれば死んでしまうかもしれないということだった。
 　恐怖心は、たやすく少女に見透かされていたのだろう。リコは少しだけ眉間にしわを寄せると、右手をさっと胸の前にかざした。その動作に合わせるように<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が赤く輝き、突風が再び希海を襲った。風に含まれるオルゴンの強度は極めて小さいものの、単純な風速は先ほどより上だ。希海は重心を低くして踏ん張るが、あえなく下から掬い上げられるようにして吹き飛ばされてしまう。
-　体が浮いた。上下が逆さになり、かぶっていた人民帽が風にさらわれる。頭を下にした状態で、希海は部屋を見渡した。どこかに力を作用させられるものはないか。本……だめだ。床の絨毯……これもだめ。せめて土か石かセラミック。金属ならなお良い。
+　体が浮いた。上下が逆さになり、かぶっていた人民帽が風にさらわれる。頭を下にした状態で、希海は部屋を見渡した。どこかに力を作用させられるものはないか。本……だめだ。板張りの床……これも心もとない。せめて土か石かセラミック。金属ならなお良い。
 （あれだ……！！）
 　希海は自らの能力を使って、リコの背後にある窓ガラスを下方向へと思いっきり押さえつけた。反作用が希海の体を下から押し上げ、墜落のスピードが幾分緩やかになる。だが空中で姿勢を取ることは叶わず、希海はあえなく地面に叩きつけられてしまう。
 「っててて」
@@ -108,7 +107,7 @@
 　突風が真正面から吹きつけた。一瞬にして壁際まで飛ばされた希海は、真っ逆さまになって地面へと叩きつけられてしまう。慌てて立ち上がったところで見たものは、悲しそうに佇む少女の姿。虹を閉じ込めた瞳には、うっすらと涙が浮かんでいた。
 「やっぱり……私は帰れません。帰らないほうが……、いいんです」
 「ど、どうして……」
-　希海はその場に立ち尽くしたまま、問にもならない問いを投げかけた。それはリコに対する問いであり、無力な自分に対する問いだ。一方の少女はその問いに答えることはせず、１ｍと少しの距離を隔てた部屋の隅でただひたすらに立ち尽くすばかり。少し歩けば触れられる距離だというのに、さっきまですぐ近くに居たというのに、今の希海にはその距離が途方もなく遠く思える。水が詰まったように足が重さを増してゆき、もはや再び歩き出すことはできなかった。
+　希海はその場に立ち尽くしたまま、問にもならない問いを投げかけた。それはリコに対する問いであり、無力な自分に対する問いだ。一方の少女はその問いに答えることはせず、数歩分の距離を隔てた部屋の隅でただひたすらに立ち尽くすばかり。少し歩けば触れられる距離だというのに、さっきまですぐ近くに居たというのに、今の希海にはその距離が途方もなく遠く思える。水が詰まったように足が重さを増してゆき、もはや再び歩き出すことはできなかった。
 「ずっと……怖かったんです」
 　リコはそんな希海を謝るような目で一瞥すると、絞るように言葉を紡ぎはじめた。
 「あの日記帳を書いていたとき……、ずっと怖かったんです。幸せを願ってみたところで、私に何ができるんだろうって。私なんかじゃ希海さんを傷付けてしまわないかって」
@@ -118,10 +117,10 @@
 「近づかないでください！」
 　こちらを睨みつける少女の目に浮かぶのは大粒の涙。それは拒否の<ruby>兆候<rp>《</rp><rt>しるし</rt><rp>》</rp></ruby>であり、絶望の<ruby>証拠<rp>《</rp><rt>しるし</rt><rp>》</rp></ruby>だった。そしてその涙は部屋全体をも包み込み、希海の体から力を奪っていく。もう……駄目なのかも知れない。自分なんかでは、リコを救えないのかもしれない。そう思うと、立っていることすらできなかった。床の上にぺたりと崩れ落ちると、全身から力が抜け落ちてゆく。
 「ごめんなさい……本当にごめんなさい。希海さんはこんなにも私のことを思ってくれるのに……。こんなにも私のことを好きでいてくれるのに」
-　途切れがちなリコの言葉。少女が謝罪を述べるたびに仄暗い絶望がふたりの間に満ち満ちてゆく。希海はもう立ち上がれなかった。膝を突き、大地に這いつくばって、ただひたすらに無力感を噛み締めながらリコの言葉に耳を傾けることしかできない。無力感に打ちひしがれ、視線を下に落としてみると、ところどころ擦り切れて血の滲んだ自分の手が見えた。
+　途切れがちなリコの言葉。少女が謝罪を述べるたびに仄暗い絶望がふたりの間に満ち満ちてゆく。希海はもう立ち上がれなかった。膝を突き、大地に這いつくばって、ただひたすらに無力感を噛み締めながらリコの言葉に耳を傾けることしかできない。徒労感に打ちひしがれ、視線を下に落としてみると、ところどころ擦り切れて血の滲んだ自分の手が見えた。
 「本当は……私だって分かってます。私は帰るべきなんだって……。それが希海さんにとっても……私にとっても良いことなんだって。でも……無理なんです。出来ないんです。怖いんです。誰かと一緒に居ることが。自分が傷つくことが。誰かを傷付けてしまうことが」
 　今にも泣き出しそうなか細い声が心臓に突き刺さった。だが不思議と痛さはない。それはまるで凍傷のように、じわりじわりと心を壊死させていくのだろう。
-「だって……、だって私はロボットで……、頭のなかを覗いてみてもそこには機械があるだけで……。私が喋る言葉も、私の行動も、考えも、何もかも歯車の動作で決まっていて……」
+「だって……、だって私はロボットで……、頭のなかを覗いてみてもそこには機械があるだけで……。私が喋る言葉も、私の行動も、考えも、何もかもが歯車の動作で決まっていて……」
 　涙をこらえながら言葉を紡ぐリコ。肩を震わせ、今にも飛び出そうなしゃっくりを必死で抑える。
 「だから私は、何もできないんです。無力なんです……。外の世界に対しても……私自身に対しても……。でも……だったら……。だったらどうして……」
 
@@ -154,8 +153,8 @@
 　だからあと少し。あと少しだけ前に進む間……それだけでいい。その間だけこの意識がもってくれれば。
 （リコ……）
 　最後の賭けだった。希海は上も下も分からぬ状態で大きく前に踏み出すとそのまま強引に数歩の距離を詰めた。<ruby>流束<rp>《</rp><rt>フラックス</rt><rp>》</rp></ruby>は前へ進むにつれて逆二乗で大きくなり、視界が急速に暗闇へと落ちていく。もはや自由に言葉を操ることすらままならない混濁した意識の中で希海はリコの名を何度も何度も呼び続けた。
-（リコ……！　リコっ……！）
-　だが、その呼びかけも視界と同時に小さくなっていく一方だ。もはや声帯を震わせる力すらも失ってしまったのか、それとも声を発する自身を知覚することができなくなったのか。ひょっとするとその両方かもしれない。いや、そんなことを考えても無駄だ。なぜなら希海の意識は、まるで大海原に垂らされたインクのように消えつつあるのだから。そして雲散霧消した心の後に残るものは、もはや動かない蛋白質の<ruby>体<rp>《</rp><rt>ボディ</rt><rp>》</rp></ruby>と涙にくれるひとつの機械だけ。
+（リコ……！　リコっ！）
+　だが、その呼びかけも視界と同時に小さくなっていく一方だ。もはや声帯を震わせる力すらも失ってしまったのか、それとも声を発する自身を知覚することができなくなったのか。ひょっとするとその両方かもしれない。いや、そんなことを考えても無駄だ。なぜなら希海の意識は、まるで大海原に垂らされた一雫のインクのように消えつつあるのだから。そして雲散霧消した心の後に残るものは、もはや動かぬ蛋白質の<ruby>体<rp>《</rp><rt>ボディ</rt><rp>》</rp></ruby>と涙にくれるひとつの<ruby>機械<rp>《</rp><rt>マシン</rt><rp>》</rp></ruby>だけ。
 
 　――リコっ！！
 
