--- a/hardproblem/5-08.html
+++ b/hardproblem/5-08.html
@@ -25,7 +25,7 @@
 　みっともない顔だった。
 　あの後、動転して泣きじゃくる希海を東は冷静になだめると、倒れたリコを車に乗せてＳＤＲのサポートセンターへと戻ってきた。そしてその車中、自分のやってしまったことを帳消しにしたい一心で希海は東にこう提案したのだ。
 　自分にリコのルーミングをやらせてくれ、と。
-　もちろん東は簡単に応諾しなかった。希海との関係のこじれがそもそもの原因である以上、その希海が再びリコの元を訪れたところで事態が悪化する可能性だってある。だが閉律症の治療は時間との戦いである以上、すぐにでもルーミングを始められる希海のアドバンテージは絶大で、それを分かっていたからこそ東も渋々と認めたのだろう。
+　もちろん東は簡単に応諾しなかった。希海との関係のこじれがそもそもの原因である以上、その希海が再びリコの元を訪れたところで事態が悪化する可能性だってある。だが閉律症の治療が時間との戦いである以上、すぐにでもルーミングを始められる希海のアドバンテージは絶大で、それを分かっていたからこそ東も渋々と認めたのだろう。
 　そして希海は今、再びＳＤＲのルーミング室に立っている。
 　前にここを訪れたのはほんの二ヶ月前。小春のルーミングを買って出たときのことだ。まさかこんな短期間でこの場所へ戻ってくるだなんて思いもよらなかった。しかもその患者は……。
 「…………」
@@ -65,7 +65,7 @@
 「ここに来てからずっとそのことばかり考えてました。あのときどうすれば良かったのかな、って。どうすれば希海さんとケンカせずにすんだのかな、って。でも何度考えても、その原因は私の方にありました」
 「リコ……」
 「私だって本当は分かってたんです。希海さんが私のことを真剣に考えてくれてることも、あの日だって無理して大学を休んでくれたことも、ちゃんと分かってたんです。それなのに私は……自分自身に対する苛立ちを何も悪くない希海さんにぶつけてしまった。私のために一緒に付いてきてくれた希海さんを自分勝手に責めてしまった。だから悪いのは……私なんです。希海さんが謝る必要なんてありません」
-　謝るべきは自分だったはずなのに。リコに謝ろうとしてここまで来たというのに。なのに、当の少女は謝って許してくれるどころか悪いのは自分だと、そう言うのだ。
+　謝るべきは自分だったはずなのに。リコに謝ろうとしてここまで来たというのに。なのに、当の少女は許してくれるどころか悪いのは自分だと、そう言うのだ。
 　もちろん納得などしていない。リコが陥った状況を考えれば自分でも同じようにしただろう。だが、もしリコが希海の立場だったらどうだ。おそらく自分の罵詈雑言を受け入れてくれてたのだと思う。だから、謝るべきは自分。これが希海の、散らかりきった頭で考えて出した結論だった。
 「……わかった」
 　だが今はそんなことで押し問答をしている場合ではない。
@@ -75,7 +75,7 @@
 「すいません。私、もう疲れたんです。私や……私を取り囲む世界のすべてに。だから私はこれからもずっとひとりで、ここからの景色を眺めているつもりです」
 　リコはそうこぼすと視線を窓の外へとやった。その瞳が捉える先に広がるのはどこまでも色鮮やかな青い世界。そしてそのきらびやかな世界を、暗がりからただひたすらに眺める少女。室内の闇によってその鮮やかさをよりいっそう引き立てられた青は、まるで壁にかけられた一枚の絵のように現実感がなかった。
 　その様子を見た希海の心臓が静かに音を立てる。
-　リコに帰る気はない。その気持ちは自分にも理解できた。閉律症に陥った患者の多くが元の世界へと帰ることを拒絶する統計データだってあるし、何よりかつての自分も同じように帰ることを拒否したのだ。だがその後に待っていたものは……。患者に帰還の意志がないことを知った精神医療作業者が次になすことといえば……。
+　リコに帰る気はない。その気持ちは自分にも理解できた。閉律症に陥った患者の多くが元の世界へと帰ることを拒絶する統計データだってあるし、何よりかつての自分も同じように帰ることを拒否したのだ。だがその後に待っていたものは……。患者に帰還の意志がないことを知った精神医療従事者が次になすことといえば……。
 　握りしめた拳に力がこもる。必死に押さえ付けていた疑問が、目をそらし続けてきた問題が希海の頭を這いずり回る。
 　一体、自分はどうすればいいのか。
 　答えは決まっている……決まっているのか？　ここで無理やりにリコを連れ戻してそれでリコは幸せなのか？　こういう事態になることは容易に想像できたはずではなかったのか？　そうなることを知っていながら、あえて自分はルーミングを買って出たのではなかったのか？
@@ -138,12 +138,12 @@
 　唇を小さく動かした。
 　<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が赤く嘶き、リコを中心として渦を巻いた分厚い気流が生じる。その旋風が破片に触れたと思った次の瞬間、遠隔作用の手応えが消えた。
 「なっ……！？」
-　そしてコントロールを離れた破片は慣性という物理学上の基礎概念すら忘れてしまったかのようにその場へ落下してまう。何が起きたのかまったく理解できなかった。
+　そしてコントロールを離れた破片は慣性という力学上の基礎概念すら忘れてしまったかのようにその場へ落下してまう。何が起きたのかまったく理解できなかった。
 「ほら、言ったでしょう」
 　ぽとぽとと力なく落ちるいくつもの植木鉢の欠片。リコはそんな破片に目もくれず、すこしだけ苦そうな顔で希海を見据える。
 「この風はすべてを消し去ることができます。力とか夢とか心とか……そういう熱を帯びたあらゆる<ruby>灯<rp>《</rp><rt>ともしび</rt><rp>》</rp></ruby>を吹き消すことができる、そういう風なんです。だから希海さんが何をしようとも勝ち目なんて……」
 　言葉が尻すぼみになって消えていく。まるで自分の無力さを語っているかのように悲しい声色。
-「だから、諦めてください。私に帰るつもりはありませんし、希海さんが力づくで連れて帰ろうとも無理なんです」
+「だから、諦めてください。私に帰るつもりはありませんし、希海さんが力づくで連れて帰ろうとしても無理なんです」
 「……嫌だって言ったら？」
 　希海は喉の奥から声をひねり出す。強がりだった。さっきの攻撃が自分のなしうるすべてで、打つ手などもはや残っていない。だがどうしても希海には諦めきれず、こうして馬鹿みたいな虚勢を張ることしかできない。
 「分かりました」
@@ -157,7 +157,7 @@
 「がっ……！」
 　戸惑う希海の背中に突風が吹きつけた。カエルみたいな姿勢で正面から壁に叩きつけられ視界が一瞬<ruby>暗 転<rp>《</rp><rt>ブラックアウト</rt><rp>》</rp></ruby>する。地面に這いつくばったまま風の吹いてきた方向を見ると、一枚の大きな窓とその傍らに立ってこちらを眺めるリコの姿。その表情は背後に広がる冗談みたいに鮮やかな景色とは正反対で、まるで雪の結晶ように冷たく今にも溶けて消えてしまいそうだった。
 「希海さん……いい加減に分かってください。もう無理なんです。私に帰るつもりはありませんし、希海さんにできることもありません」
-　きらびやかな明るい外の世界と仄暗いモノトーンの室内。その陰影の差はあまりにハイコントラストであまりに悲しい。この狭い六畳間がリコの精神空間の全てなのだろうか。リコはここでこれからずっとひとりで生きていくのだろうか。
+　きらびやかな明るい外の世界と仄暗いモノトーンの室内。その色彩の落差はあまりにハイコントラストであまりに悲しい。この狭い六畳間がリコの精神空間の全てなのだろうか。リコはここでこれからずっとひとりで生きていくのだろうか。
 「そんなの私は……」
 　納得できなかった。
 「どうして？　どうしてリコがこんな場所にずっと居なきゃいけないの？　どうして一緒に帰ってくれないの？　私は……私はどうすればいいの？　リコが居ないと私……」
