--- a/hardproblem/6-05.html
+++ b/hardproblem/6-05.html
@@ -23,13 +23,14 @@
 　――希海さん
 
 　聞き覚えのある声が、押し殺したように小さな音量で自分を呼ぶ。
+「希海さん」
 「…………ん……」
 　希海は目を擦って声の方を振り返った。闇に慣れた目に飛び込んできたのは寝間着姿の少女。リコは水玉模様の枕を手に持ち、少し申し訳なさそうな顔をしてベッドの前に立ち尽くしていた。
 　カーテン越しに見える月明かりが少しだけ眩しい。希海は目を細めながら枕元の時計を手に取った。セグメントが指し示す時刻は深夜の二時過ぎ。まともに学校へ行っている人間なら『なんて時間に起こしてくれたんだ』と文句の一つでも言うところである。だが幸か不幸か、不登校の希海には寝るための時間など掃いて捨てるほどにあった。
 「……どうしたの？」
-　寝返りを打ち、布団にくるまったまま少女の方を向いた。こんな時間にリコが起きてるなんて珍しい。いつも日付が変わると早々に瞼を重くしていたというのに、一体何があったのだろう。
+　寝返りを打ち、布団にくるまったまま少女の方を向いた。こんな時間にリコが起きてくるなんて珍しい。いつも日付が変わると早々に瞼を重くしていたというのに、一体何があったのだろう。
 「えっと……」
-　眠たそうな様子の希海に一抹の後ろめたさ感じたのだろうか。リコは少しだけ恥ずかしそうに体をもじらせる。
+　眠たそうな様子の希海に一抹の後ろめたさ感じたのだろうか。リコは少しだけ恥ずかしそうに体をもじらせると、
 「……一緒に寝ていいですか？　怖い夢見ちゃったんです」
 「は、はぁ……？」
 　ロボットでも夢を見るのかという驚きと、お前は本当に十五歳なのかという突っ込みが、一瞬脳裏を掠める。だが希海は何も言わずにスペースを詰め、さっさと布団に入るようリコに促した。そんな至極どうでもいい感想を述べている内に眠気がどこかへ飛んでいってはいけないと思ったからだ。
@@ -41,8 +42,8 @@
 　再び目をつぶっては見たものの中々寝付けなかった。もともと眠りが浅くなっていたところを起こされたのもあるだろうし、昼間に数時間ほど仮眠を取ったせいもあるだろう。こうして暗闇の中でじっとしていると、背中に感じるリコの体温を強く意識せざるをえなかった。
 「……どんな夢みたの」
 　希海が尋ねた。沈黙が少しだけ重かった、というのがその理由。リコがこの部屋に来て既に数ヶ月。幾つもの昼と夜を共にしてきたし、今さら沈黙なんかが気になる間柄ではない。だが、このときばかりは何故か違った。物理的な距離が近かったからかもしれないし、周囲の音があまりに少なすぎたからかもしれない。
-　リコはわずかばかりの沈黙の後、言葉を選ぶようにして小さく答えた。
 「私が死んじゃう夢です」
+　リコはわずかばかりの沈黙の後、言葉を選ぶようにして小さく答えた。
 「……そっか」
 　なるほど。確かにそれは悪夢に違いない。誰かに殺されたか、高いところから落ちたか。はたまた病死や溺死。つい先程リコの身に降り掛かったらしい出来事を自分に置き換えて想像を巡らせてみる希海だったが、不思議とどれもまったく現実感が沸かなかった。
 「ねえ希海さん。死んだら……、どうなるんでしょう？」
@@ -57,9 +58,9 @@
 「体がなくなるってことは、目が見えなくなるってことです」
 「うん」
 「目だけじゃありません。耳も、鼻も、指もです。死んだら、真っ暗闇になっちゃいます」
-「そうね」
+「うん」
 「ＦＩＡＮＣもなくなっちゃうから、考えたり思ったりすることすらできません。死んだら……何もなくなっちゃいます」
-「うん多分それが正解」
+「うん、多分それが正解」
 「希海さんは……怖くないんですか？」
 「私？」
 　どうだろう。今現在、死への恐怖に襲われているかと問われればその答えはノーだ。昨日も今日も、自分は死に関することなど微塵も考えずに過ごしてきた。そしてそれは明日もそうなのだろう。だがそれは当面の話であって、<ruby>今際<rp>《</rp><rt>いまわ</rt><rp>》</rp></ruby>の<ruby>際<rp>《</rp><rt>きわ</rt><rp>》</rp></ruby>には死の恐怖に震えるであろうことは想像に難くなかった。それがあまりにも先の話なので実感が湧かないだけだ。
@@ -89,7 +90,7 @@
 
 　セミの合唱に混じって、すすり泣く声が聞こえてきた。
 「どうして、こんなことするんですか……」
-　次に感じたのは光。窓の外から差し込む強烈な夏の太陽。絵の具で塗りつぶしたような青い空と、木々の鮮やかな緑が目に飛び込んでくる。
+　次に感じたのは光。窓の外から差し込む強烈な夏の太陽。絵の具で塗りつぶしたような青空と、どこまでも広がる青碧の海が目に飛び込んでくる。
 「どうして私なんかのために……、ここまでするんですか」
 　気付けば、部屋の中でリコを抱きしめていた。
 　数枚の布を隔てた向こうから伝わる柔らかな感触と体温。ようやく辿り着いた細い肩は怯えるように小さく震えている。
@@ -99,7 +100,7 @@
 　だから希海は伝える。今の今まで心に秘めていた、その言葉を。誰よりも憧れて、そして永遠に手の届かない存在だった少女に。
 「機械になりたいって、思った。ううん、いまでもそう思ってる。心なんていらないって、機械になりたいって、ずっとそう思い続けて……だから私は、ずっとリコが羨ましくて……。私が持てない強さを持ってて、私なんかとは全然違う存在だと思ってて……でも……」
 　腕の中で震える少女……いや、少女という言葉は正確ではないのかもしれない。
-　なぜなら希海が強く抱きしめるそれは所詮、人を模した<ruby>機械<rp>《</rp><rt>マシン</rt><rp>》</rp></ruby>にすぎないからだ。柔肌を一皮むけばそこにあるのは蜘蛛の巣のように張り巡らされた電子回路で、偽装された呼吸に合わせて肩を上下させているのは微細なアクチュエータの脈動。涙を湛えた瞳はどこにでもある受光素子だし、肌の暖かさは熱交換液によって運ばれてきたニューラルプロセッサの排熱だ。そして、それらすべてに指令を出しているのは巨大な集積回路のお化け。そんな<ruby>部分<rp>《</rp><rt>パーツ</rt><rp>》</rp></ruby>の<ruby>集 合<rp>《</rp><rt>よせあつめ</rt><rp>》</rp></ruby>にすぎないただの<ruby>機械<rp>《</rp><rt>マシン</rt><rp>》</rp></ruby>。
+　なぜなら希海が強く抱きしめるそれは所詮、人を模した<ruby>機械<rp>《</rp><rt>マシン</rt><rp>》</rp></ruby>にすぎないからだ。柔肌を一皮むけばそこにあるのは蜘蛛の巣のように張り巡らされた電子回路で、偽装された呼吸に合わせて肩を上下させているのは微細なアクチュエータの脈動。涙を湛えた瞳はどこにでもある受光素子だし、肌の暖かさは熱交換液によって運ばれてきたニューラルプロセッサの排熱だ。そして、それらすべてに指令を出しているのは頭の中にある巨大な集積回路のお化け。そんな<ruby>部分<rp>《</rp><rt>パーツ</rt><rp>》</rp></ruby>の<ruby>集 合<rp>《</rp><rt>よせあつめ</rt><rp>》</rp></ruby>にすぎないただの<ruby>機械<rp>《</rp><rt>マシン</rt><rp>》</rp></ruby>。
 「でも……違った。わかったの。リコも私と同じなんだって。宇宙の法則とか……、言うこと聞かない心とかに振り回されて苦しんでる仲間なんだって」
 　そしてその<ruby>機械<rp>《</rp><rt>マシン</rt><rp>》</rp></ruby>は紛れもないひとつの命だった。因果の玉突きに翻弄されて泣いたり笑ったりするだけの、希海と同じ哀れな命。心という<ruby>呪い<rp>《</rp><rt>ハードプロブレム</rt><rp>》</rp></ruby>に振り回されざるを得ない、ちっぽけな存在。
 「ごめんね。無責任だよね……。馬鹿で無力で自分勝手な……そんな私なんかに何ができるんだろうって本当に思う。でも……」
