表現の細かい訂正

--- a/hardproblem/6-05.html
+++ b/hardproblem/6-05.html
@@ -90,7 +90,7 @@
 
 　セミの合唱に混じって、すすり泣く声が聞こえてきた。
 「どうして、こんなことするんですか……」
-　次に感じたのは光。窓の外から差し込む強烈な夏の太陽。絵の具で塗りつぶしたような青空と、どこまでも広がる青碧の海が目に飛び込んでくる。
+　次に感じたのは光。窓の外から差し込む強烈な夏の太陽。絵の具で塗りつぶしたような鮮やかな空と、どこまでも広がる青い海が目に飛び込んでくる。
 「どうして私なんかのために……、ここまでするんですか」
 　気付けば、部屋の中でリコを抱きしめていた。
 　数枚の布を隔てた向こうから伝わる柔らかな感触と体温。ようやく辿り着いた細い肩は怯えるように小さく震えている。
