--- a/tieserovurs/2_leqt.html
+++ b/tieserovurs/2_leqt.html
@@ -6,198 +6,53 @@
 </head>
 <body>
 
-<p class="logo"><img  src="tieserovurs.png"></p>
-<p class="title">文字と発音</p>
-<p class="caption">ティエセル語の表記にはティエセル文字(tiesero grapt：ティエセロラプト)と呼ばれる19個のアルファベットが使われます。ティエセル文字は5つの母音字と14の子音字から構成されており、母音字は下部に伸ばし記号“︵”を打つことで長音になります。また、文字は左から右に横書きします。</p>
-  <table class="alphabet">
-    <tbody>
-      <tr class="alphabet_column">
-        <td colspan="6" style="background-color:#aaaaff">母音字</td>
-      </tr>
-      </tr>
-      <tr class="alphabet_column">
-        <td rowspan="2">名称</td>
-        <td rowspan="2">文字</td>
-        <td colspan="2">発音</td>
-        <td rowspan="2">ラテン転写</td>
-        <td rowspan="2">カナ転写</td>
-      </tr>
-      </tr>
-      <tr class="alphabet_column">
-        <td style="width:150px;">古典音</td>
-        <td style="width:150px;">現代音</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td rowspan="2">elf<br>エルフ</td>
-        <td><img src="grapt/e.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/e/</td>
-        <td>e</td>
-        <td>エ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td><img src="grapt/ea.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/eɐ/</td>
-        <td>ea</td>
-        <td>エア</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td rowspan="2">aet<br>アエト</td>
-        <td><img src="grapt/a.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/a/</td>
-        <td>a</td>
-        <td>ア</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td><img src="grapt/ae.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/aɛ/</td>
-        <td>ae</td>
-        <td>アエ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td rowspan="2">iet<br>イエト</td>
-        <td><img src="grapt/i.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/i/</td>
-        <td>i</td>
-        <td>イ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td><img src="grapt/ie.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/iɛ/</td>
-        <td>ie</td>
-        <td>イエ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td rowspan="2">oem<br>エーム</td>
-        <td><img src="grapt/o.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/o/</td>
-        <td>o</td>
-        <td>オ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td><img src="grapt/oe.jpg"></td>
-        <td class="alphabet_pronounce">/oɛ/</td>
-        <td class="alphabet_pronounce">/øː/</td>
-        <td>oe</td>
-        <td>エー</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td rowspan="2">upt<br>ウプト</td>
-        <td><img src="grapt/u.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/u/</td>
-        <td>u</td>
-        <td>ウ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td><img src="grapt/ue.jpg"></td>
-        <td class="alphabet_pronounce">/uɛ/</td>
-        <td class="alphabet_pronounce">/yː/</td>
-        <td>ue</td>
-        <td>ユー</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>rot<br>ロット</td>
-        <td><img src="grapt/r.jpg"></td>
-        <td class="alphabet_pronounce">/ɹ/</td>
-        <td class="alphabet_pronounce">a,ae,o,uの前で/ʀ/<br>それ以外の場合/ɹ/</td>
-        <td>r</td>
-        <td>レ・ラ・リ・ロ・ル</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>lam<br>ラム</td>
-        <td><img src="grapt/l.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/l/</td>
-        <td>l</td>
-        <td>レ・ラ・リ・ロ・ル</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>nim<br>ニム</td>
-        <td><img src="grapt/n.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">q,gr,ra,rae,ro,ruの前で/ng/<br>それ以外の場合/n/</td></td>
-        <td>n</td>
-        <td>ネ・ナ・ニ・ノ・ヌ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>mim<br>ミム</td>
-        <td><img src="grapt/m.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/m/</td>
-        <td>l</td>
-        <td>メ・マ・ミ・モ・ム</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>gram<br>ラム</td>
-        <td><img src="grapt/gr.jpg"></td>
-        <td class="alphabet_pronounce">/g/</td>
-        <td class="alphabet_pronounce">a,ae,o,uの前で/ʀ/<br>それ以外の場合/g/</td>
-        <td>gr</td>
-        <td>ゲ・ラ・ギ・ロ・ル</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>qap<br>ハップ</td>
-        <td><img src="grapt/q.jpg"></td>
-        <td class="alphabet_pronounce">/k/</td>
-        <td class="alphabet_pronounce">a,ae,o,uの前で/x/<br>それ以外の場合/k/</td>
-        <td>q</td>
-        <td>ケ・ハ・キ・ホ・フ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>zet<br>ゼット</td>
-        <td><img src="grapt/z.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/z/</td>
-        <td>z</td>
-        <td>ゼ・ザ・ジ・ゾ・ズ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>siel<br>シエル</td>
-        <td><img src="grapt/s.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/s/</td>
-        <td>s</td>
-        <td>セ・サ・シ・ソ・ス</td>
-      </tr>
-      </tr>
-      <tr class="alphabet_list">
-        <td>del<br>デル</td>
-        <td><img src="grapt/d.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/d/</td>
-        <td>d</td>
-        <td>デ・ダ・ディ・ド・ドゥ</td>
-      </tr>
-      </tr>
-      <tr class="alphabet_list">
-        <td>tef<br>テフ</td>
-        <td><img src="grapt/t.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/t/</td>
-        <td>s</td>
-        <td>テ・タ・ティ・ト・トゥ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>wel<br>ウェル</td>
-        <td><img src="grapt/w.jpg"></td>
-        <td class="alphabet_pronounce">/v/</td>
-        <td class="alphabet_pronounce">/ʋ/</td>
-        <td>w</td>
-        <td>ウェ・ワ・ウィ・ウォ・ウ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>fis<br>フィス</td>
-        <td><img src="grapt/f.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/f/</td>
-        <td>f</td>
-        <td>フェ・ファ・フィ・フォ・フ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>vet<br>ヴェット</td>
-        <td><img src="grapt/v.jpg"></td>
-        <td class="alphabet_pronounce">/b/</td>
-        <td class="alphabet_pronounce">/v/</td>
-        <td>v</td>
-        <td>ヴェ・ヴァ・ヴィ・ヴォ・ヴ</td>
-      </tr>
-      <tr class="alphabet_list">
-        <td>pul<br>プル</td>
-        <td><img src="grapt/p.jpg"></td>
-        <td colspan="2" class="alphabet_pronounce">/p/</td>
-        <td>p</td>
-        <td>ペ・パ・ピ・ポ・プ</td>
-      </tr>
+<p class="title">5つの光調</p>
+<p class="subtitle">- アクセント -</p>
+<p class="caption">名詞・形容詞および動詞には光調およびアクセントが存在し、アクセントのある音節には記号が付されます。アクセントはストレスアクセントで周りの音節より強くはっきりと発音されますが、後述の光調があるために無光調言語よりもその差異は曖昧です。</p>
+<p class="subtitle">- 光調とは -</p>
+<p class="caption">光調とは、変調させた魔力を乗せて発声することで意味を識別する言語機能です。光調は本来、東大陸で話されるダリム語群において顕著な特徴であって、ティエセル語が属する西大陸のシトラ語群には元々光調がありませんでした（今でもシトラ語群のほとんどの言語に光調はありません）。しかしティエセルは両大陸の地峡に位置しており、東西の文明が交わる結節点の役割を果たしていたために、ダリム語群の影響を強く受け光調を獲得するに至りました。</p>
+<p class="subtitle">- ティエセル語の光調 -</p>
+<p class="caption">魔力の偏光は通常、三次元逆空間上の方位で表現されます。ティエセル語およびティエセルの一般的な魔術体系ではこの三次元空間に4つの一次従属な基底ベクトルを偏光(sírm:シルム)として定めます。4つのベクトルは正四面体の重心からそれぞれの頂点に向かう方向にとります。これら4つの方角は大地[rúet:リュート]・水[óet：エート]・大気[íer：イエル]・火[fáer：ファエル]と呼び習わされ、すべてを同じ強さで発振する全偏光[púls léqt：プルスレクト]（光輝[éser：エセル]と呼ばれます）と合わせてティエセル語の5つの光調を形作ります。</p>
+<p class="caption" style="text-align:center;"><img src="sirm.png"></p>
+<p class="subtitle">- 光調の表記 -</p>
+<p class="caption">ティエセル語では1つの単語につき1つの光調が付され、アクセント記号を書き分けることでそれを表記します。地・水・気・火・光の5つの光調にはそれぞれ独自のアクセント記号が与えられ、光調を持たない音節には何も記しません。</p>
+<p class="caption">
+<table class="tone">
+  <tbody>
+    </tr>
+    <tr class="tone_column">
+      <td>光調</td>
+      <td>記号</td>
+      <td>ラテン転写</td>
+    </tr>
+    <tr>
+      <td>地偏光</td>
+      <td><img src="grapta/ruet.jpg"></td>
+      <td>ē,ā,ī,ō,ū</td>
+    </tr>
+    <tr>
+      <td>水偏光</td>
+      <td><img src="grapta/oet.jpg"></td>
+      <td>ě,ǎ,ǐ,ǒ,ǔ</td>
+    </tr>
+    <tr>
+      <td>気偏光</td>
+      <td><img src="grapta/ier.jpg"></td>
+      <td>ẽ,ã,ĩ,õ,ũ</td>
+    </tr>
+    <tr>
+      <td>火偏光</td>
+      <td><img src="grapta/faer.jpg"></td>
+      <td>ê,â,î,ô,û</td>
+    </tr>
+    <tr>
+      <td>全偏光</td>
+      <td><img src="grapta/eser.jpg"></td>
+      <td>é,á,í,ó,ú</td>
+    </tr>
+  </tbody>
+</table></p>
+<p class="caption">辞書の見出しなど光調が問題にならない場合には便宜的に全偏光の符号を付してアクセント位置を明示します。</p>
+
 </body>
 </html>
