文字がダブってた

--- a/tieserovurs/1_graptaketpoevitera.html
+++ b/tieserovurs/1_graptaketpoevitera.html
@@ -8,7 +8,7 @@
 
   <p class="title">文字と発音</p>
 
-  <p class="caption">ティエセル語の表記にはティエセル文字(tíesero grápta：ティエセロラプタ)と呼ばれる19個のアルファベットが使われます。ティエセル文字は5つの母音字と14の子音字から構成されており、母音字は下部に伸ばし記号“︵”を打つことで長音になります。また、文字は左から右に横書きします。</p>
+  <p class="caption" style="width:800px;">ティエセル語の表記にはティエセル文字(tíesero grápta：ティエセロラプタ)と呼ばれる19個のアルファベットが使われます。ティエセル文字は5つの母音字と14の子音字から構成されており、母音字は下部に伸ばし記号“︵”を打つことで長音になります。また、文字は左から右に横書きします。</p>
 
   <table class="alphabet">
     <tbody>
