リンク間違ってた

--- a/tieserovurs/2_femtleqta.html
+++ b/tieserovurs/2_femtleqta.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <title>tiesero soel - 文字と発音</title>
+  <title>tíesero vúrs - 5つの光調</title>
 </head>
 <body>
 
