--- a/tieserovurs/2_femtleqta.html
+++ b/tieserovurs/2_femtleqta.html
@@ -15,7 +15,7 @@
 <p class="caption">魔力の偏光は通常、三次元逆空間上の方位で表現されます。ティエセル語およびティエセルの一般的な魔術体系ではこの三次元空間に4つの一次従属な基底ベクトルを偏光(sírm:シルム)として定めます。4つのベクトルは正四面体の重心からそれぞれの頂点に向かう方向にとります。これら4つの方角は大地[rúet:リュート]・水[óet：エート]・大気[íer：イエル]・火[fáer：ファエル]と呼び習わされ、すべてを同じ強さで発振する全偏光[púls léqt：プルスレクト]（光輝[éser：エセル]と呼ばれます）と合わせてティエセル語の5つの光調を形作ります。</p>
 <p class="caption" style="text-align:center;"><img src="sirm.png"></p>
 <p class="subtitle">- 光調の表記 -</p>
-<p class="caption">ティエセル語では1つの単語につき1つの光調が付され、アクセント記号を書き分けることでそれを表記します。地・水・気・火・光の5つの光調にはそれぞれ独自のアクセント記号が与えられ、光調を持たない音節には何も記しません。</p>
+<p class="caption">ティエセル語では1つの単語につき1つの光調が付され、アクセント記号を書き分けることでそれを表記します。地・水・気・火・光の5つの光調にはそれぞれ独自のアクセント記号が与えられ、アクセントおよび光調を持たない単語（接続詞や助動詞など）には何も記しません。</p>
 <p class="caption">
 <table class="tone">
   <tbody>
