--- a/tieserovurs/2_femtleqta.html
+++ b/tieserovurs/2_femtleqta.html
@@ -10,7 +10,7 @@
 <p class="subtitle">- アクセント -</p>
 <p class="caption">名詞・形容詞および動詞には光調およびアクセントが存在し、アクセントのある音節には記号が付されます。アクセントはストレスアクセントで周りの音節より強くはっきりと発音されますが、後述の光調があるために無光調言語よりもその差異は曖昧です。</p>
 <p class="subtitle">- 光調とは -</p>
-<p class="caption">光調[léqt:レクト]とは、変調させた魔力を乗せて発声することで意味を識別する言語機能です。光調は本来、東大陸で話されるダリム語群において顕著な特徴であって、ティエセル語が属する西大陸のシトラ語群には元々光調がありませんでした（今でもシトラ語群のほとんどの言語に光調はありません）。しかしティエセルは両大陸の地峡に位置しており、東西の文明が交わる結節点の役割を果たしていたために、ダリム語群の影響を強く受け光調を獲得するに至りました。</p>
+<p class="caption">光調[léqt:レクト]とは、変調させた魔力を乗せて発声することで意味を識別する言語機能です。光調は本来、東大陸で話されるダリム語族において顕著な特徴であって、ティエセル語が属する西大陸のシトラ語族には元々光調がありませんでした（今でもシトラ語族のほとんどの言語に光調はありません）。しかしティエセルは両大陸の地峡に位置しており、東西の文明が交わる結節点の役割を果たしていたために、ダリム語群の影響を強く受け光調を獲得するに至りました。</p>
 <p class="subtitle">- ティエセル語の光調 -</p>
 <p class="caption">魔力の偏光は通常、三次元逆空間上の方位で表現されます。ティエセル語およびティエセルの一般的な魔術体系ではこの三次元空間に4つの一次従属な基底ベクトルを偏光(sírm:シルム)として定めます。4つのベクトルは正四面体の重心からそれぞれの頂点に向かう方向にとります。これら4つの方角は大地[rúet:リュート]・水[óet：エート]・大気[íer：イエル]・火[fáer：ファエル]と呼び習わされ、すべてを同じ強さで発振する全偏光[púls léqt：プルスレクト]（光輝[éser：エセル]と呼ばれます）と合わせてティエセル語の5つの光調を形作ります。</p>
 <p class="caption" style="text-align:center;"><img src="sirm.png"></p>
