--- a/metastable3/0.html
+++ b/metastable3/0.html
@@ -17,8 +17,8 @@
 　そこは墓場だった。
 
 　夕日の赤色がどす黒い雲と混ざり合ったグロテスクな空と、耳障りな鳴き声を上げながらあてもなく周回するカラスの群れ。もうずっと沈みかけたままの太陽は一向にその姿を暗ますことはなく、おびただしい数の十字架が石畳に複雑な影を刻んでいる。
-　そんな中、私はひとつの墓の前で立ち尽くしていた。
- その簡素でみすぼらしい石塊は、周囲のそれと同じようにキリスト教の様式に従って装飾が施されている。こんな場所一度も来たことがないというのに、家は代々浄土真宗だというのに、私にはその墓が自分のために作られたものであるとすぐに理解できた。
+　私はひとつの墓の前で立ち尽くしていた。
+　その簡素でみすぼらしい石塊は、周囲のそれと同じようにキリスト教の様式に従って装飾が施されている。こんな場所一度も来たことがないというのに、家は代々浄土真宗だというのに、私にはその墓が自分のために作られたものであるとすぐに理解できた。
 　そう、これは私の墓。私はつい先日、死んでしまったのだ。なぜだかは分からない。けれど私には、まるで幼いころ１＋１が２であることを誰に教わるでもなく知ったのと同じように、自然とそれを理解することができた。
 　だがこれが自分の墓なのだとすれば……私は一体どうしてここに立っているんだろう。死してなお墓に入らずこの場に立ち尽くしている自分は、一体何者なのだろう。そんな疑問が頭をよぎったが、私はそれについて深く考えたくもなかった。
 　そんな風にしばらくカラスの鳴き声を聞いていた私の背後。死人のように動かず、ただじっと自らの墓石を眺めていた私の後で、ひとつの気配がした。
