--- a/metastable3/1-05.html
+++ b/metastable3/1-05.html
@@ -174,6 +174,7 @@
 「だからね。本気で来てくれていいわよ。それこそ殴ったり蹴ったりするつもりでも全然平気だから」
 　なるほど。そういうことなら遠慮はやめようと藤白は思う。とりあえず相手のリーチの長さが厄介だ。とくると、まずすべきことは――
 　そして藤白は希海に向かって一直線に駈け出した。相手の力がどれほど遠くまで及ぶのかは分からないが、近づいてしまえば希海の能力の最大の長所である射程距離が全然活かせなくなってしまうだろう。だが、
+「甘い」
 「うわっ！？」
 　どこからともなく飛んできた棒状のオブジェが藤白の足元に転がされ、それを踏んづけてしまった藤白はあえなくその場にすっ転んでしまう。
 「ち、ちくしょう……って、ぐえっ！」
@@ -221,10 +222,11 @@
 　「お、おい紀佳！」
 　叩き落とされた蝿のように、頭を下にしてその場に力なく落下する紀佳。右手一本で着地をして頭を守ろうとするが、上手くいかずにその場に倒れこんでしまう。
 　希海はそんな紀佳の元へ一目散に駆けていく。そしてその腕章に手を掛けようとした次の瞬間、
-　うずくまっていた紀佳の足が動いた。バネのように蹴り出された右足が<ruby>鳩尾<rp>《</rp><rt>みぞおち</rt><rp>》</rp></ruby>を直撃し、希海は数歩分後ろに跳ね飛ばされて仰向けに倒れこんでしまう。紀佳は体を反らして片手で起き上がり、そのまま倒れこんでいた希海に馬乗りになるとその腕章に手をかけようとして、
+　うずくまっていた紀佳の足が動いた。バネのように蹴り出された右足が<ruby>鳩尾<rp>《</rp><rt>みぞおち</rt><rp>》</rp></ruby>を直撃し、希海は数歩分後ろに跳ね飛ばされて仰向けに倒れる。よほど強烈な一撃だったのか、希海は地に横たわったまま咳込み、なかなか立ち上がろうとしない。そしてその間に紀佳は体をねじって片手で起き上がると、倒れこんでいた希海に駆け寄って馬乗りになる。
+　もはや勝負あったか。藤白の目にそう写った戦いの行方。だが紀佳は馬乗りになった状態から希海の腕章に手を伸ばし、そして――
 　止まった。
-　仰向けに倒れたままの状態から伸ばした希海の右手。
-　その手は紀佳よりも一瞬早く、相手の腕章に触れていた。
+　仰向けに倒れたままの状態から伸ばされた希海の右手。
+　その指先は紀佳よりも一瞬早く、相手の腕章に触れていた。
 　
 </div>
 
