daisy bellに動画リンク追加

--- a/hardproblem/references.html
+++ b/hardproblem/references.html
@@ -49,7 +49,7 @@
 <li class="ref_title">坂本龍一 - Ballet Mécanique</li>
 人間に恋をした機械(オルゴールとの説あり)の曲。希海の<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>がオルゴールなのはここから着想を得ました。本文にもところどころに歌詞を引用した言い回しが出てきますね。また作者が選ぶリコのイメージ曲でもあります。
 <li class="ref_title">Harry Dacre - Daisy Bell</li>
-超有名ですね。世界ではじめて機械が歌った曲であり、2001年宇宙の旅でHALが歌った曲です。作者が選ぶ希海のイメージ曲。
+超有名ですね。世界ではじめて機械が歌った曲であり、2001年宇宙の旅でHALが歌った曲です。<a href="https://www.youtube.com/watch?v=CK2DePGkEos" target="_blank" style="color:#0055bb; text-decoration:none;">これ</a>なんかは作者が選ぶ希海のイメージ曲だったり。
 <li class="ref_title">Terry Riley</li>
 現代音楽家。§2に登場する教科書の著書はここから名前を拝借しました。
 <li class="ref_title">Morton Subotnick</li>
