--- a/picture/fm16.html
+++ b/picture/fm16.html
@@ -21,7 +21,7 @@
     ハドプレBadEnd（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a> さん）
   </div>
   
-  <div class="caption">リコと出会えずに男どもの性欲の対象になる事でしか救われなかったかった未来。
+  <div class="caption">リコと出会えずに男どもの性欲の対象になる事でしか救われなかった未来。
 <p style="font-style:italic; font-size:small;">
 「ギャハハハｗ俺がプレゼントしてあげた服、本当に着て来てくれたんだｗ」<br>
 「希海ちゃん最高だわーｗなんでも言う事聞いてくれるし、おっぱいでかいしｗうらやましいわーｗ」<br>
